src/test/ui/issues/issue-22603.stderr
error: compilation successful
  --> $DIR/issue-22603.rs:21:1
   |
LL | / fn main() { //~ ERROR compilation successful
LL | |     println!("{:?}", Foo("bar"));
LL | | }
   | |_^

error: aborting due to previous error

